-moved from pyQT5 to QtPy (hope this did not break things)

28/06/2022
-added color preview of multichannel images (uses IJ LUTs when available)
-added support for LSM type of luts (that are lists, I assumed they are linear interpolation of the max value but in fact I don't know)
-fix LUT loss upon Z/T or channel change, should work now...

27/06/2022
-started adding support for multi-dimension browsing (not finalized --> work in progress)
-changed a bit the GT editor even though it probably still needs more love...

15/06/2022
-added support for increasing contrast of displayed images (press C)
-many changes applied to paint/display to build a binary GT editor for deep learning with a lot of automated stuff to help the user. I hope I didn't break anything in TA that shares this class...

05/05/2022
-added support for filling/erasing shape (double left/right click in drawing mode)

25/01/2022
-fixed a huge bug (affecting all non-square images for detection of neighbors)

14/01/2022
-pushed two additional surface projection model weights to gitlab

12/01/2022
-fixed a stack recursion error (not really a coding error but rather a poor coding issue, combined with a small stack limitation of the python language)
-fixed progress bar not updating properly (due to a stupid progress calculation/parenthesis error)

10/2021
-added a new static tracking algorithm (that can run much faster than the other tracking algorithm provided the recursion is not enabled)
-work in progress: started adding support for the great mermaid library (that performs deep learning registration). Given the difficulty to install mermaid (no pypi), I'll probably offer support for this as a colab web page ultimately.
-fixed minor bugs
-started adding support for graph plotting directly from within pyta