@@ -1,6 +1,6 @@
 __MAJOR__ = 0
 __MINOR__ = 1
-__MICRO__ = 43
+__MICRO__ = 44
 __RELEASE__ = ''  # a #b  # https://www.python.org/dev/peps/pep-0440/#public-version-identifiers --> alpha beta, ...
 __VERSION__ = ''.join([str(__MAJOR__), '.', str(__MINOR__), '.', str(__MICRO__)])
 
